--- a/index.html
+++ b/index.html
@@ -5,25 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PDF Viewer</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="WebViewer/lib/webviewer.min.js"></script>  <!-- Hapus type="module" kalau bermasalah -->
+  <script src="WebViewer/lib/webviewer.min.js" type="module"></script>
 </head>
 <body>
   <div id="root"></div>
   <script type="module" src="main.js"></script>
-  
-  <!-- Register Service Worker buat COOP/COEP -->
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function() {
-        navigator.serviceWorker.register('/sw.js')
-          .then(function(registration) {
-            console.log('Service Worker registered successfully:', registration);
-          })
-          .catch(function(error) {
-            console.log('Service Worker registration failed:', error);
-          });
-      });
-    }
-  </script>
 </body>
 </html>
