--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>PDF Viewer</title>
   <link rel="stylesheet" href="styles.css">
   <script src="WebViewer/lib/webviewer.min.js" type="module"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app.js" type="module"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-database.js" type="module"></script>
 </head>
 <body>
   <div id="root"></div>
