--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
   <script src="WebViewer/lib/webviewer.min.js" type="module"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/9.6.11/firebase-database.js"></script>
-  <!-- 1. Include the Appwrite SDK -->
+  <!-- Add the Appwrite SDK -->
   <script src="https://cdn.jsdelivr.net/npm/appwrite@11.0.0/dist/browser/appwrite.min.js"></script>
 </head>
 <body>
   <div id="root"></div>
-  <!-- 2. Load the main script -->
   <script type="module" src="main.js"></script>
 </body>
 </html>
