--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
   <script src="WebViewer/lib/webviewer.min.js" type="module"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/9.6.11/firebase-database.js"></script>
-  <!-- Add the Appwrite SDK -->
+  <!-- Add the Appwrite SDK - Load before modules -->
   <script src="https://cdn.jsdelivr.net/npm/appwrite@11.0.0/dist/browser/appwrite.min.js"></script>
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="main.js"></script>
+  <!-- Load main.js after Appwrite SDK is ready -->
+  <script>
+    // Wait for Appwrite to load, then load main module
+    window.addEventListener('load', function() {
+      if (window.Appwrite) {
+        import('./main.js');
+      } else {
+        console.error('Appwrite SDK failed to load');
+      }
+    });
+  </script>
 </body>
 </html>
