--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <script src="WebViewer/lib/webviewer.min.js" type="module"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app.js"></script>
   <script type="module" src="https://www.gstatic.com/firebasejs/9.6.11/firebase-database.js"></script>
-  <!-- Load Appwrite SDK -->
-  <script src="https://cdn.jsdelivr.net/npm/appwrite@11.0.0/dist/browser/appwrite.min.js"></script>
+  <!-- Load Appwrite Web SDK - Use ES modules approach -->
+  <script type="module">
+    import { Client, Storage, ID } from 'https://cdn.skypack.dev/appwrite';
+    window.AppwriteWeb = { Client, Storage, ID };
+  </script>
 </head>
 <body>
   <div id="root"></div>
