--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>PDF Viewer</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="multiple-tabs.css">
+
+  <!-- WebViewer -->
   <script src="WebViewer/lib/webviewer.min.js" type="module"></script>
 
   <!-- Firebase -->
@@ -21,7 +23,7 @@
 <body>
   <div id="root"></div>
 
-  <!-- Order matters: reader + uploader before main -->
+  <!-- Order matters -->
   <script type="module" src="reader.js"></script>
   <script type="module" src="uploader.js"></script>
   <script type="module" src="main.js"></script>
